--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@react-navigation/native": "^7.0.0",
     "edf_hackathon_2024": "file:",
     "expo": "~52.0.18",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
-    "expo-router": "4.0.11",
+    "expo-router": "^4.0.11",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
