Add vehicle details tab, integrate expo-camera, and update API endpoints

--- a/app.json
+++ b/app.json
@@ -23,6 +23,7 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      "expo-camera",
       "expo-router",
       [
         "expo-splash-screen",
