--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "~52.0.18",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.1",
+    "expo-camera": "^16.0.9",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
